[gd_scene load_steps=10 format=3 uid="uid://dnam188cfqgn5"]

[ext_resource type="Script" path="res://scenes/prefabs/carlitox.gd" id="1_ol4nw"]
[ext_resource type="Texture2D" uid="uid://buiphch21602o" path="res://assets/jojo - carlitox PATAS.png" id="2_hekae"]
[ext_resource type="Texture2D" uid="uid://dke1ll48043xc" path="res://assets/jojo - carlitox - torso.png" id="3_i6hg3"]
[ext_resource type="Texture2D" uid="uid://dak4olh0g27pd" path="res://assets/jojo - carlitox boca abierta.png" id="4_yv711"]
[ext_resource type="AudioStream" uid="uid://bcrcre1bgbenu" path="res://assets/jojojo.wav" id="5_58k4g"]

[sub_resource type="Animation" id="Animation_t78wp"]
resource_name = "mover_las_patas"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("patas:rotation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1, 2, 2.5, 3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [6.28319, 0.0, -6.28319, 0.0, 6.28319]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("cuerpoBoca:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.7),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="Animation" id="Animation_d3slb"]
resource_name = "boca"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("cuerpoBoca:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [true, false, true, false, true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_l5n5r"]
_data = {
"boca": SubResource("Animation_d3slb"),
"mover_las_patas": SubResource("Animation_t78wp")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_ypvi6"]
radius = 55.0
height = 256.0

[node name="Carlitox" type="RigidBody2D"]
collision_layer = 3
collision_mask = 0
gravity_scale = 0.0
max_contacts_reported = 20
contact_monitor = true
script = ExtResource("1_ol4nw")

[node name="TimerAcelera" type="Timer" parent="."]
process_callback = 0
wait_time = 5.0
autostart = true

[node name="Boca" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(0, -92)

[node name="patas" type="Sprite2D" parent="."]
position = Vector2(-0.499997, -3.75)
rotation = 6.28319
scale = Vector2(0.788793, 0.720884)
texture = ExtResource("2_hekae")
offset = Vector2(0, 55)

[node name="cuerpo" type="Sprite2D" parent="."]
position = Vector2(-3.5, -74.75)
scale = Vector2(0.788793, 0.720884)
texture = ExtResource("3_i6hg3")

[node name="cuerpoBoca" type="Sprite2D" parent="."]
position = Vector2(-3.5, -74.75)
scale = Vector2(0.788793, 0.720884)
texture = ExtResource("4_yv711")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_l5n5r")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-4, -33)
shape = SubResource("CapsuleShape2D_ypvi6")

[node name="sfx_jojojo" type="AudioStreamPlayer" parent="."]
stream = ExtResource("5_58k4g")
volume_db = 12.381

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="timeout" from="TimerAcelera" to="." method="acelerar"]
